<resources>
    <string name="app_name">DanielOram Micro-blogging App</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="update">Update!</string>
    <string name="status_hint">Enter your status...</string>
    <string name="default_max_length">140</string>
    <string name="preferences">Preferences</string>
    <string name="prefs">Prefs</string>
    <string name="username">Username</string>
    <string name="username_summary">How do you login into Micro Blogger service?</string>
    <string name="password">Password</string>
    <string name="password_summary">And, what is your password?</string>
    <string name="server">Server</string>
    <string name="server_summary">What\'s the URL to your Yamba server?</string>
    <string name="refresh">Refresh</string>
    <string name="text_timeline">Timeline</string>
    <string name="status_update">Status Update</string>
</resources>
