<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
    <item
        android:id="@+id/item_status_update"
        android:icon="@android:drawable/ic_menu_send"
        app:showAsAction="always|withText"
        android:title="@string/status_update"
        android:titleCondensed="@string/update"/>
    <item
        android:id="@id/item_prefs"
        android:icon="@android:drawable/ic_menu_preferences"
        app:showAsAction="ifRoom"
        android:title="@string/prefs"/>
    <item
        android:id="@+id/item_refresh"
        android:icon="@android:drawable/ic_menu_rotate"
        app:showAsAction="always|withText"
        android:title="@string/refresh"/>
</menu>
